@@ -2303,14 +2303,6 @@ A pointer to a NUL terminated string: the name of the port type.  This
 is the only element of @code{scm_ptob_descriptor} which is not
 a procedure.  Set via the first argument to @code{scm_make_port_type}.
 
-@item mark
-Called during garbage collection to mark any SCM objects that a port
-object may contain.  It doesn't need to be set unless the port has
-@code{SCM} components.  Set using
-
-@deftypefun void scm_set_port_mark (scm_t_bits tc, SCM (*mark) (SCM port))
-@end deftypefun
-
 @item free
 Called when the port is collected during gc.  It
 should free any resources used by the port.
